# qpm

./: README.md  pyproject.toml
docs/: README.md  TODO.md  analytical_etdrk4.md  ask.md  cwe_to_npda_derivation.md  duty_engineer.priv.md  ekahan.md  etd.md  ipm1_proof.md  maxwell.md  memo.md  minimal.md  note.md  npda.md  optimization.md  optimize_problem.md  proofs.md  refs.md  sato_poc.md  search.md  sfg_analytical.md  thg.md  todo.md
docs/artifacts/: bangbang_impl.md  ipm_pc.md  npda_derivation_simple.md  thg_bangbang.md
docs/cthg/: ask.md  cayley_euler.md  cayley_magnus.md  cnlse.md  cnlse2.min.md  cthg.md  cthg_npda_tandem.priv.md  leff.md  leff_cayley_magnus.md  leff_magnus_cayley.min.md  lfaga.md  lfaga_b.min.md  magnus.md  memo.md  nlse_example.md  npda_derivation.min.md  npda_impl.md  npda_impl.min.md  perturbation.min.md  perturbation.priv.md  perturbation_super_step.min.md  pulse_shg.md  super_step.min.md
docs/cthg_old/: cthg_npda_tandem.md
docs/derivations/: dyson_series.md  shg_cwe_npda_derivation.md  thg_bangbang.md
docs/optimization/: optimization_techniques.md
docs/optimize_thg/: bangbang_theory.md  task.md
docs/report/: 20251204.md  optimize_thg_note.md
docs/shg/: dcm.min.md  dcm_cpwpm.md  dcm_fejer.min.md  duty_cycle_modulation.md  duty_cycle_modulation.min.md  fejer_vs_sfm.md  (+8 more)
examples/: ekahan.ipynb  ideal_thg.ipynb  noro_reproduce.ipynb  noro_reproduce_jl.ipynb  optimize_jl_v2.ipynb  optimize_shg_eff.ipynb  optimize_thg.ipynb  optimize_thg_jl.ipynb  sfg_analytical.ipynb  thg_ipm1_only.ipynb  thg_ipm1_pc.ipynb  thg_ipm1_pc_jl.ipynb  thg_scipy.ipynb  thg_symplectic.ipynb
(+325 files in other folders)
