[project]
name = "qpm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Xo1otl", email = "xolotl.mictl4n@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "flax",
    "gplugins[femwell,meow,sax,schematic,tidy3d]>=1.3.8",
    "jax-tqdm",
    "plotly",
]

[tool.ruff]
line-length = 150

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "ERA001", "T201", "INP001"]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = [
    "S101", # assert
    "S102", # exec
    "T201", # print
    "E501", # line too long
]

"examples/*" = [
    "S101",    # assert
    "S102",    # exec
    "T201",    # print
    "E501",    # line too long
    "N806",    # 先頭が大文字の変数
    "PLR2004", # 定数をハードコードしてもよい
    "N816",    # グローバル変数自由
]
